src/styles/blocks/form.scss
@import "../utils/mixins";

.form {
  display: flex;
  flex-direction: column;
  gap: 16px;
  grid-column: 1 / -1;

  @include onTablet {
    grid-column: 1 / 4;
  }

  @include onDesktop {
    grid-column: span 6;
  }

  &__input {
    display: block;
    width: 100%;
    box-sizing: border-box;
    height: 48px;
    flex-shrink: 0;
    padding: 14px 16px;
    border-radius: 40px;
    background: $bg-color-link;
    outline: none;
    border: none;

    font-family: Poppins, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 20px;

    &::placeholder {
      color: $color-placeholder;
    }

    &:hover::placeholder {
      color: $color-placeholder-hover;
    }

    &:focus {
      outline: $color-placeholder;
    }

    &--message {
      height: 120px;
      border-radius: 16px;
      margin-bottom: 16px;
      resize: none;
      box-sizing: border-box;
    }
  }

  &__submit {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 48px;
    flex-shrink: 0;
    border-radius: 40px;
    background: $main-text-color;
    color: $main-color-menu;
    height: 48px;
    text-decoration: none;
    outline: none;
    border: none;

    @include font-char(16px, 700, 27px);

    &:active {
      box-shadow: 1px 4px 16px 0 rgba(232, 232, 240, 0.64);
    }

    @include onDesktop {

      &:hover {
        box-shadow: 1px 4px 16px 0 rgba(232, 232, 240, 0.4);
      }
    }
  }
}

